--- a/trunk/web/WEB-INF/pages/structure/insert.vm
+++ b/trunk/web/WEB-INF/pages/structure/insert.vm
@@ -4,12 +4,14 @@
 <div id="conbg">
 <div class=contitle>
 <div class=leftmain>定义表结构</div>
-<div class=rightmain>&nbsp;&nbsp;<a href="/structure/actions.html?method=list">&#171;返回</a></div>
 <div class=rightmain></div>
 </div>
 $validator.getDynamicJavascript()
 $validator.getStaticJavascript()
 <table width="100%"><tr><td><div id=message></div></td></tr></table>
+#if($!updated)
+	<script type="text/javascript">showmsg(true,"保存成功!",msg);</script>
+#end
 #set($actionUrl="/structure/actions.html?method=insert&insert=y")
 <div class=conmain>
 	#parse( "/WEB-INF/pages/structure/form.vm" )
