--- a/trunk/web/WEB-INF/pages/structure/form.vm
+++ b/trunk/web/WEB-INF/pages/structure/form.vm
@@ -4,7 +4,7 @@
     <div id="listheadrightimg"></div>
 </div>
 <form name="infoSortForm" method="post"
-      action="/infosort/actions.html?method=insert&parentId=$vMUtils.encrypt($parentId)&insert=list">
+      action="/structure/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($infoSortId)&insert=list&statuses=$vMUtils.encrypt($status)">
     <table width="99%" border="0" cellpadding="0" cellspacing="0" style="background-color:#FFFFFF">
         <tbody>
         <tr>
