--- a/web/css/condet.css
+++ b/web/css/condet.css
@@ -161,6 +161,7 @@ lmain1 ul li{padding:5px;
 	font-size: 14px;
 	font-weight: bold;
     letter-spacing:10px;
+    cursor:pointer;
 	width: 200px;
 	background-color: #436A9C;;
 	border-top: 1px solid #69c;
