--- a/web/WEB-INF/pages/common/menu_new.vm
+++ b/web/WEB-INF/pages/common/menu_new.vm
@@ -1,6 +1,6 @@
 <td width="180" height="500" valign="top" bgcolor="#93B1D7">
 <script language="JavaScript" src="/scripts/menu.js"></script>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script   type="text/javascript" src="/scripts/jquery-latest.js"></script>
 <link rel="stylesheet" href="/css/screen.css" type="text/css"/>
 <link rel="stylesheet" href="/css/jquery.treeview.css" type="text/css"/>
 <script type="text/javascript" src="/scripts/jquery.treeview.js"></script>
